# org-chart-maker

./: .gitignore  CREDITS.rst  LICENSE.rst  MANIFEST.in  README.rst  alembic.ini  diagram_reader.py  flask_app.py  install.sh  setup.cfg
alembic/versions/: 5702b6ae81ba_add_column_to_show_arrow_heads.py  a444c36d585f_add_menu_preference_column.py  d06722312ba1_add_email_field_to_user.py  d0cd2ccf936d_create_password_reset_link_table.py
csv_exports/: .gitignore
doc/: .gitignore  ocm-technology-stack-diagram.odg  ocm-technology-stack.odt
gui-tests/: .gitignore
gui-tests/tests/: test_gui.py
org_chart_maker/: __init__.py  auth.py  diagram_editor.py  emails.py  schema.sql  utils.py
org_chart_maker/static/: border-color-dialog.js  colorpicker.css  context-menu.css  csv-import.js  drop-down-menu.css  filter-by-level.js  general.css  geometry.js  help.html  line-rectangle-intersection.js  menu-bar.css  navbar-image-menu.css  navbar.css  preferences.js  sidebar.css  sub-organizations.js  table.css  toast-message.css  toast-message.js  undo.js
org_chart_maker/static/images/: .gitignore  credits.txt
org_chart_maker/static/menu-icons/: .gitignore
org_chart_maker/templates/: base-auth.html  base.html
org_chart_maker/templates/auth/: forgot-password.html  invalid-reset-link.html  login.html  password-saved.html  user.html  (+2 more)
save-files/selenium_user/: example-org-chart.xml
save-files/test/: invalid-file.xml
templates/: large-business.xml  medium-business.xml  small-business.xml
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py  utils.py
(+4 files in other folders)
