[metadata]
name = org_chart_maker
version = 1.0.0
url = https://github.com/martinvanzijl/org-chart-maker
license = MIT License
maintainer = Martin van Zijl
maintainer_email = martin.vanzijl@gmail.com
description = An online program to create Org Charts.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    org_chart_maker
